- Reverted original widgetContent overflow to prevent other elements (not dropdowns) from spilling outside of the widget (if the widget is smaller than components inside it). Old Dropdown is now called DropdownPortal - DropdownPortal is only used in PaginationInfo component. - Reverted changes in PaginationTest.js

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -217,7 +217,7 @@ a:hover {
     bottom: 15px;
     left: 0px;
     right: 0px;
-    overflow: visible;
+    overflow: auto;
     padding: 15px;
 
     &.noHeader {
